# hackaton_2

./: .dockerignore  .gitignore  Cargo.toml  README  README.md  docker-compose.yml  test_index.json
frontend/: .gitignore  .prettierignore  Dockerfile  nginx.conf  package-lock.json  package.json  prettier.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: app.html
frontend/src/components/Footer/: Footer.svelte
frontend/src/components/Header/: Logo.svelte
frontend/src/components/Landing/: Section.svelte  TechBadge.svelte  ThreeScene.svelte
frontend/src/components/Layout/: MainLayout.svelte
frontend/src/components/QuickFilters/: QuickFilters.svelte
frontend/src/components/Search/: DetailDrawer.svelte  Search.svelte  SearchDropdown.svelte  SearchInput.svelte  StateIndicator.svelte
frontend/src/components/Search/details/: DocumentDetail.svelte  PersonDetail.svelte
frontend/src/components/Search/results/: DefaultResult.svelte  DocumentResult.svelte  PersonResult.svelte
frontend/src/components/controllers/: Page.controller.svelte.ts  Search.controller.svelte.ts
frontend/src/core/: api.ts
frontend/src/lib/: utils.ts
frontend/src/lib/contexts/stores/: storeContext.ts
frontend/src/lib/infrastructure/i18n/: index.svelte.ts  ru.json
frontend/src/lib/infrastructure/store/: SearchStore.svelte.ts
frontend/src/lib/reactivity/: MediaQuery.svelte.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/api/search/: +server.ts
frontend/src/routes/search/: +page.server.ts  +page.svelte
frontend/src/tailwind/: app.css
frontend/src/uikit/core/: ShootingStars.svelte
frontend/src/uikit/core/Button/: Button.svelte  index.ts  types.ts
frontend/src/uikit/core/Input/: Input.svelte  index.ts  types.ts
frontend/src/uikit/icons/: CloseIcon.svelte  DocIcon.svelte  GadgetIcon.svelte  SearchIcon.svelte  UserIcon.svelte  index.ts  types.ts
frontend/static/: loader.lottie
index-service/: Cargo.toml  Dockerfile
index-service/src/: chunker.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  state.rs
index-service/src/handlers/: health.rs  index.rs  mod.rs  sparse.rs
index-service/tests/: index_endpoint.rs
mocks/: Cargo.toml  Dockerfile.dense  Dockerfile.rerank
mocks/src/: lib.rs
scripts/seed/: init_qdrant.sh  seed.py  seed_data.sh
search-service/: Cargo.toml  Dockerfile
search-service/src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  pipeline.rs  state.rs
search-service/src/handlers/: health.rs  search.rs
search-service/src/retrieval/: dense.rs  mod.rs  qdrant.rs  rerank.rs  sparse.rs
search-service/tests/: search_endpoint.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/tests/: serde_test.rs
