[workspace]
members = [
    "shared",
    "index-service",
    "search-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["hood"]

[workspace.dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
fastembed = { version = "5.13.2" }
chrono = { version = "0.4", features = ["serde"] }


qdrant-client = "1"
reqwest = { version = "0.13.2", features = ["json"] }