[package]
name = "index-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "5.13.2"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"