[package]
name = "search-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }   # понизили
qdrant-client = "1"

shared = { path = "../shared" }
fastembed = { workspace = true }