[package]
name = "search-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
qdrant-client = { workspace = true }
fastembed = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

[dev-dependencies]
wiremock = { workspace = true }
mockall = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
tokio-test = { workspace = true }
